# ICKAS---Intelligent-Contextual-Knowledge-Augmentation-System

./: Qdrant.py  README.md  Streamlit_UI.py  app.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
