[project]
name = "ICKAS"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "inngest",
    "langchain-ollama>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "python-multipart>=0.0.24",
    "qdrant-client>=1.17.1",
    "uvicorn>=0.44.0",
]
